--- a/_sass/prbaron/_pagination.scss
+++ b/_sass/prbaron/_pagination.scss
@@ -34,7 +34,7 @@
   & > li.active > span:focus {
     background: url('/img/pagination-bg.png') top right no-repeat;
     border: 0;
-    color: #ffffff;
+    color: #fff;
     padding: 7px 13px;
   }
 }
