--- a/_sass/bootstrap-3.3.6/bootstrap/_alerts.scss
+++ b/_sass/bootstrap-3.3.6/bootstrap/_alerts.scss
@@ -9,7 +9,7 @@
 .alert {
   padding: $alert-padding;
   margin-bottom: $line-height-computed;
-  border: 1px solid transparent;
+  border: none;
   border-radius: $alert-border-radius;
 
   // Headings for larger alerts
@@ -22,6 +22,10 @@
   // Provide class for links that match alerts
   .alert-link {
     font-weight: $alert-link-font-weight;
+  }
+
+  .alert-title {
+    display: block
   }
 
   // Improve alignment and spacing of inner content
