--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
           </svg>
         </button>
         <a class="navbar-brand" href="{{'/' | prepend : site.baseurl }}">
-          <img src="/img/logo.png" alt="logo"/>
+          <img src="/img/logo.png" alt="logo" height="48"/>
         </a>
       </div>
       <div class="navbar-collapse collapse navbar-right" id="bs-example-navbar-collapse-1">
