--- a/_sass/bootstrap-3.3.6/bootstrap/mixins/_buttons.scss
+++ b/_sass/bootstrap-3.3.6/bootstrap/mixins/_buttons.scss
@@ -8,45 +8,72 @@
   background-color: $background;
   border-color: $border;
 
+  &:hover,
   &:focus,
   &.focus {
     color: $color;
     background-color: darken($background, 10%);
-        border-color: darken($border, 25%);
+    border-color: lighten($border, 8%);
   }
-  &:hover {
-    color: $color;
-    background-color: darken($background, 10%);
-        border-color: darken($border, 12%);
-  }
+
   &:active,
   &.active,
   .open > &.dropdown-toggle {
     color: $color;
     background-color: darken($background, 10%);
-        border-color: darken($border, 12%);
+    border-color: darken($border, 12%);
 
     &:hover,
     &:focus,
     &.focus {
       color: $color;
-      background-color: darken($background, 17%);
-          border-color: darken($border, 25%);
+      background-color: darken($background, 15%);
+      border-color: darken($border, 25%);
     }
   }
+
   &:active,
   &.active,
   .open > &.dropdown-toggle {
     background-image: none;
   }
+}
+
+// Button variants
+//
+// Easily pump out default styles, as well as :hover, :focus, :active,
+// and disabled options for all buttons
+
+@mixin button-variant-ghost($color, $background, $border) {
+  color: $border;
+  background-color: transparent;
+  border: 2px solid $border;
+
+  &:hover,
+  &:focus,
+  &:active,
+  &.active,
+  .open > &.dropdown-toggle {
+    color: $color;
+    background-color: $border;
+    border-color: $border;
+  }
+  &:active,
+  &.active,
+  .open > &.dropdown-toggle {
+    background-color: darken($border, 12%);
+    border-color: darken($border, 12%);
+  }
   &.disabled,
   &[disabled],
   fieldset[disabled] & {
+    &,
     &:hover,
     &:focus,
-    &.focus {
+    &:active,
+    &.active {
       background-color: $background;
-          border-color: $border;
+      border-color: $border;
     }
   }
 
