--- a/_sass/prbaron/_fonts.scss
+++ b/_sass/prbaron/_fonts.scss
@@ -5,3 +5,39 @@
   font-style: normal;
   font-weight: 400;
 }
+
+@font-face {
+  font-family: "iA Writer Duospace";
+  font-weight: normal;
+  font-style: normal;
+  src: url("/fonts/duospace/iAWriterDuospace-Regular.eot") format("embedded-opentype"),
+  url("/fonts/duospace/iAWriterDuospace-Regular.woff2") format("woff2"),
+  url("/fonts/duospace/iAWriterDuospace-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "iA Writer Duospace";
+  font-weight: normal;
+  font-style: italic;
+  src: url("/fonts/duospace/iAWriterDuospace-Italic.eot") format("embedded-opentype"),
+  url("/fonts/duospace/iAWriterDuospace-Italic.woff2") format("woff2"),
+  url("/fonts/duospace/iAWriterDuospace-Italic.woff") format("woff");
+}
+
+@font-face {
+  font-family: "iA Writer Duospace";
+  font-weight: bold;
+  font-style: normal;
+  src: url("/fonts/duospace/iAWriterDuospace-Bold.eot") format("embedded-opentype"),
+  url("/fonts/duospace/iAWriterDuospace-Bold.woff2") format("woff2"),
+  url("/fonts/duospace/iAWriterDuospace-Bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "iA Writer Duospace";
+  font-weight: bold;
+  font-style: italic;
+  src: url("/fonts/duospace/iAWriterDuospace-BoldItalic.eot") format("embedded-opentype"),
+  url("/fonts/duospace/iAWriterDuospace-BoldItalic.woff2") format("woff2"),
+  url("/fonts/duospace/iAWriterDuospace-BoldItalic.woff") format("woff");
+}
