--- a/_sass/prbaron/_tagline.scss
+++ b/_sass/prbaron/_tagline.scss
@@ -8,10 +8,10 @@
   }
 
   .tagline-title {
-    font-family: "Mir-Medium", Kreon, sans-serif;
-    font-weight: 400;
+    font-family: "iA Writer Duospace", Kreon, sans-serif;
+    //font-weight: 400;
     font-size: 2em;
-    text-align: center;
+    //text-align: center;
     text-shadow: 0 2px 0 rgba(0, 0, 0, .3), 0 2px 0 rgba(0, 0, 0, .1);
 
     @media (min-width: $screen-xs-min) {
