--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,17 +1,17 @@
-{% if jekyll.environment == "production" && site.google_analytics_id %}
+{% if jekyll.environment == "production" %}
+<!-- Matomo -->
 <script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', '{{ site.google_analytics_id }}']);
-  _gaq.push(['_setDomainName', '{{ site.url }}']); // Multiple sub-domains
-  _gaq.push(['_setAllowLinker', true]); // Multiple TLDs
-  _gaq.push(['_trackPageview']);
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
   (function() {
-    var ga = document.createElement('script');
-    ga.type = 'text/javascript';
-    ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(ga, s);
+    var u="//analytics.pierrebaron.fr/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '1']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
+<!-- End Matomo Code -->
 {% endif %}
