--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,21 +2,11 @@
   <div class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-            data-target="#bs-example-navbar-collapse-1">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-
-          <svg x="0" y="0" width="44px" height="44px" viewBox="0 0 44 44">
-            <circle cx="22" cy="22" r="20"></circle>
-          </svg>
-        </button>
         <a class="navbar-brand" href="{{'/' | prepend : site.baseurl }}">
           <img src="/img/logo.png" alt="logo" height="48"/>
         </a>
       </div>
-      <div class="navbar-collapse collapse navbar-right" id="bs-example-navbar-collapse-1">
+      <div class="navbar-right">
         {% include menu.html %}
       </div>
       <!--/.nav-collapse -->
@@ -27,9 +17,9 @@
 
   {% include tagline.html %}
 
-  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
+  <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="60"
       viewBox="0 0 100 100" preserveAspectRatio="none">
-    <path d="M0 0 L0 100 L50 100"></path>
-    <path d="M100 0 L100 100 L50 100"></path>
+    <path d="M0 0 L0 100 L50 100"/>
+    <path d="M100 0 L100 100 L50 100"/>
   </svg>
 </header>
