--- a/_sass/prbaron/_footer.scss
+++ b/_sass/prbaron/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  svg {
+  > svg {
     display: block;
 
     path {
@@ -8,18 +8,21 @@
   }
 
   a {
+    display: inline-block;
     padding-right: 25px;
-  }
 
-  i {
-    font-size: $grid-gutter-width;
+    svg {
+      fill: currentColor;
+      height: 32px;
+      width: 32px;
+    }
   }
 
   [class*="col-"]:not(:last-child) {
     margin-bottom: $grid-gutter-width;
 
     @media (min-width: $screen-md-min) {
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
   }
 
