--- a/_sass/prbaron/_highlighter.scss
+++ b/_sass/prbaron/_highlighter.scss
@@ -4,7 +4,6 @@ pre {
   color: $gray-lighter;
   font-size: 14px;
   margin: 0;
-  //padding       : ($line-height-computed - 1) (($line-height-computed - 1) / 2);
   word-break: normal;
 }
 
@@ -46,7 +45,7 @@ pre {
 
 /* Name */
 .o {
-  color: #96b5b4
+  color: #a3b6ca
 }
 
 /* Operator */
@@ -108,7 +107,7 @@ pre {
 
 /* Generic.Strong */
 .gu {
-  color: #96b5b4;
+  color: #a3b6ca;
   font-weight: bold
 }
 
@@ -124,7 +123,7 @@ pre {
 
 /* Keyword.Declaration */
 .kn {
-  color: #96b5b4
+  color: #a3b6ca
 }
 
 /* Keyword.Namespace */
@@ -159,7 +158,7 @@ pre {
 
 /* Literal.String */
 .na {
-  color: #8fa1b3
+  color: #a3b6ca
 }
 
 /* Name.Attribute */
@@ -179,7 +178,7 @@ pre {
 
 /* Name.Constant */
 .nd {
-  color: #96b5b4
+  color: #a3b6ca
 }
 
 /* Name.Decorator */
@@ -194,7 +193,7 @@ pre {
 
 /* Name.Exception */
 .nf {
-  color: #8fa1b3
+  color: #a3b6ca
 }
 
 /* Name.Function */
@@ -209,7 +208,7 @@ pre {
 
 /* Name.Namespace */
 .nx {
-  color: #8fa1b3
+  color: #a3b6ca
 }
 
 /* Name.Other */
@@ -219,7 +218,7 @@ pre {
 
 /* Name.Property */
 .nt {
-  color: #96b5b4
+  color: #a3b6ca
 }
 
 /* Name.Tag */
@@ -229,7 +228,7 @@ pre {
 
 /* Name.Variable */
 .ow {
-  color: #96b5b4
+  color: #a3b6ca
 }
 
 /* Operator.Word */
