--- a/_sass/prbaron/_works.scss
+++ b/_sass/prbaron/_works.scss
@@ -2,7 +2,7 @@
   margin-bottom: $grid-gutter-width * 2;
 
   &:last-child {
-    margint-bottom: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -16,6 +16,6 @@
   margin-top: $grid-gutter-width;
 
   @media (min-width: $screen-sm-min) {
-    margin-top: 0px;
+    margin-top: 0;
   }
 }
