--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -6,7 +6,7 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//analytics.pierrebaron.fr/";
+    var u="//209.97.142.222/";
     _paq.push(['setTrackerUrl', u+'matomo.php']);
     _paq.push(['setSiteId', '1']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
