--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,17 +1,3 @@
 {% if jekyll.environment == "production" %}
-<!-- Matomo -->
-<script type="text/javascript">
-  var _paq = window._paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//209.97.142.222/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '1']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<!-- End Matomo Code -->
+<script async defer data-website-id="869d51ad-6547-4f71-ad8d-3bb9ab8cb04c" src="https://prbaron-umami.herokuapp.com/umami.js"></script>
 {% endif %}
